--- a/GRTPath/res/values/strings.xml
+++ b/GRTPath/res/values/strings.xml
@@ -12,8 +12,9 @@
     <string name="color_stripe">Color Stripe</string>
     <string name="title_activity_stop_finder">StopFinderActivity</string>
     <string name="search_hint">Search for bus stops</string>
-    <string name="no_search">Bus stops will be displayed here</string>
+    <string name="no_search">Search for a stop</string>
     <string name="title_activity_display_routes">DisplayRoutes</string>
     <string name="title_activity_map">MapActivity</string>
+    <string name="no_stops">No buses found for this stop today.</string>
 
 </resources>
